# fastapi-rpn-calculator

./: Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  wait-for-db.sh
.github/workflows/: ci-dev.yml  ci-main.yml
app/api/: routes.py
app/core/: rpn.py
app/db/: database.py
app/fixtures/: load_fixtures.py  seed.json
app/models/: models.py
app/schemas/: schemas.py
app/services/: services.py
services/: services.py
tests/: test_database.py  test_fixtures.py  test_models.py  test_routes.py  test_rpn.py  test_services.py
